terraform-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linksnap
  labels:
    app: linksnap
